cmake_minimum_required(VERSION 3.5)
project(xtdb LANGUAGES CXX)
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
	if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
		message(FATAL_ERROR "gcc version should be higher than 9.0!")
	endif()
endif()
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(xtdb)
add_subdirectory(xtdb-test)

